--- a/system-login.in
+++ b/system-login.in
@@ -8,6 +8,9 @@ auth		include		system-auth
 #if HAVE_ACCESS		
 account		required	pam_access.so DEBUG
 #endif				
+#ifdef HAVE_LOGIN_ACCESS
+account		required	pam_login_access.so
+#endif
 account		include		system-auth
 #if HAVE_TALLY		
 account		required	pam_tally.so file=/var/log/faillog onerr=succeed DEBUG
