--- a/system-login.in
+++ b/system-login.in
@@ -29,4 +29,8 @@ session		include		system-auth
 #if HAVE_SELINUX
 session		required	pam_selinux.so multiple open
 #endif
- 
+// These are optional, so there is no reason to actually put them under
+// additional conditionals to get them ignored on FreeBSD.
+session		optional	pam_motd.so motd=/etc/motd
+session		optional	pam_mail.so
+  
