--- a/system-login.in
+++ b/system-login.in
@@ -4,7 +4,9 @@ auth		optional	pam_gnome_keyring.so
 #if HAVE_TALLY
 auth		required	pam_tally.so file=/var/log/faillog onerr=succeed DEBUG
 #endif
+#if HAVE_SHELLS
 auth		required	pam_shells.so DEBUG
+#endif
 auth		required	pam_nologin.so DEBUG
 auth		include		system-auth
  				
