--- a/system-login.in
+++ b/system-login.in
@@ -40,8 +40,10 @@ session		include		system-auth
 #if HAVE_SELINUX
 session		required	pam_selinux.so multiple open
 #endif
-// These are optional, so there is no reason to actually put them under
-// additional conditionals to get them ignored on FreeBSD.
+#if HAVE_MOTD
 session		optional	pam_motd.so motd=/etc/motd
+#endif
+#if HAVE_MAIL
 session		optional	pam_mail.so
+#endif
   
