--- a/system-auth.in
+++ b/system-auth.in
@@ -9,6 +9,9 @@ account		required	pam_unix.so DEBUG
 #if HAVE_CRACKLIB
 password	required	pam_cracklib.so difok=2 minlen=8 dcredit=2 ocredit=2 try_first_pass retry=3 DEBUG
 #endif
+#if HAVE_PASSWDQC
+password	required	pam_passwdqc.so min=8,8,8,8,8 retry=3
+#endif
 password	sufficient	pam_unix.so try_first_pass AUTHTOK nullok UNIX_EXTENDED_ENCRYPTION DEBUG
 password	required	pam_deny.so
  
