Only enable session support for pam_unix when available.
This fixes bug #232669 for what concern pam_unix. The pam_unix module
shipped with FreeBSD 7 has no support for session management so cannot
be used for that.

--- a/system-auth.in
+++ b/system-auth.in
@@ -28,5 +28,7 @@ session		optional	pam_mktemp.so
 #ifdef HAVE_PAM_SSH
 session		optional	pam_ssh.so
 #endif
+#ifdef HAVE_PAM_UNIX_SESSION
 session		required	pam_unix.so DEBUG
- 
+#endif
+
