--- a/system-login.in
+++ b/system-login.in
@@ -4,7 +4,9 @@ auth		required	pam_tally.so file=/var/log/faillog onerr=succeed DEBUG
 #if HAVE_SHELLS
 auth		required	pam_shells.so DEBUG
 #endif
+#if SUPPORT_NOLOGIN_AUTH
 auth		required	pam_nologin.so DEBUG_NOLOGIN
+#endif
 auth		include		system-auth
 #if HAVE_GNOME_KEYRING
 auth		optional	pam_gnome_keyring.so
