--- a/system-auth.in
+++ b/system-auth.in
@@ -31,4 +31,4 @@ session		optional	pam_ssh.so
 #if SUPPORT_UNIX_SESSION
 session		required	pam_unix.so DEBUG
 #endif
-
+session		optional	pam_permit.so
