--- a/system-login.in
+++ b/system-login.in
@@ -39,6 +39,9 @@ session		required	pam_env.so DEBUG
 #endif
 session		optional	pam_lastlog.so DEBUG
 session		include		system-auth
+#if HAVE_CONSOLEKIT
+session		optional	pam_ck_connector.so nox11
+#endif
 #if HAVE_GNOME_KEYRING
 session		optional	pam_gnome_keyring.so auto_start
 #endif
