Improve handling of the tally module.
The pam_tally module, only provided by Linux-PAM for us, is replaced in
newer instances with the pam_tally2 module which is wordsize-independent.

For this reason, make the configuration choose the best tally module
between the two depending on the version of the Linux-PAM package.

Also drop the DEBUG indication: the module does not support the debug
option.

--- a/system-login.in
+++ b/system-login.in
@@ -1,5 +1,5 @@
-#if HAVE_TALLY
-auth		required	pam_tally.so file=/var/log/faillog onerr=succeed DEBUG
+#if defined(TALLY_MODULE)
+auth		required	TALLY_MODULE file=/var/log/faillog onerr=succeed
 #endif
 #if HAVE_SHELLS
 auth		required	pam_shells.so DEBUG
@@ -22,8 +22,8 @@ account		required	pam_login_access.so
 account		required	pam_nologin.so DEBUG_NOLOGIN
 #endif
 account		include		system-auth
-#if HAVE_TALLY
-account		required	pam_tally.so file=/var/log/faillog onerr=succeed DEBUG
+#if defined(TALLY_MODULE)
+account		required	TALLY_MODULE file=/var/log/faillog onerr=succeed DEBUG
 #endif
  
 password	include		system-auth
