--- a/system-login.in
+++ b/system-login.in
@@ -1,5 +1,5 @@
 #if defined(TALLY_MODULE)
-auth		required	TALLY_MODULE file=/var/log/faillog onerr=succeed
+auth		required	TALLY_MODULE onerr=succeed
 #endif
 #if HAVE_SHELLS
 auth		required	pam_shells.so DEBUG
@@ -23,7 +23,7 @@ account		required	pam_nologin.so DEBUG_NOLOGIN
 #endif
 account		include		system-auth
 #if defined(TALLY_MODULE)
-account		required	TALLY_MODULE file=/var/log/faillog onerr=succeed DEBUG
+account		required	TALLY_MODULE onerr=succeed DEBUG
 #endif
  
 password	include		system-auth
