--- a/system-auth.in
+++ b/system-auth.in
@@ -8,9 +8,11 @@ auth		sufficient	pam_ssh.so
 auth		KRB5_CONTROL	pam_krb5.so KRB5_PARAMS
 #endif
 auth		required	pam_unix.so try_first_pass LIKEAUTH nullok DEBUG
+/* This is needed to make sure that the Kerberos skip-on-success won't cause a bad jump. */
+auth		optional	pam_permit.so
  
 #if HAVE_KRB5
-auth		KRB5_CONTROL	pam_krb5.so KRB5_PARAMS
+account		KRB5_CONTROL	pam_krb5.so KRB5_PARAMS
 #endif
 account		required	pam_unix.so DEBUG
  
