--- a/system-services.in
+++ b/system-services.in
@@ -2,4 +2,7 @@ auth		sufficient	pam_permit.so
 
 account		include		system-auth
 
+#if HAVE_LOGINUID
+session         optional        pam_loginuid.so
+#endif
 #include "system-session.inc"
