--- a/system-auth.in
+++ b/system-auth.in
@@ -35,3 +35,7 @@ password	optional	pam_permit.so
 session		optional	pam_ssh.so
 #endif
 #include "system-session.inc"
+
+#if HAVE_SYSTEMD
+-session        optional        pam_systemd.so
+#endif
