Import -lastlog-silent.patch from gentoo-x86, see bug #468798

--- a/system-login.in
+++ b/system-login.in
@@ -41,7 +41,7 @@ session		required	pam_selinux.so close
 session		required	pam_env.so DEBUG
 #endif
 #if HAVE_LASTLOG
-session		optional	pam_lastlog.so DEBUG
+session		optional	pam_lastlog.so silent DEBUG
 #endif
 session		include		system-auth
 #if HAVE_CONSOLEKIT
