--- a/login.in
+++ b/login.in
@@ -3,4 +3,6 @@ auth       include	system-local-login
 
 account    include	system-local-login
 password   include	system-local-login
+
+session    optional pam_lastlog.so DEBUG
 session    include	system-local-login
