--- a/login.in
+++ b/login.in
@@ -1,4 +1,6 @@
+#if HAVE_SECURETTY
 auth       required	pam_securetty.so
+#endif
 auth       include	system-local-login
 
 account    include	system-local-login
