--- a/system-login.in
+++ b/system-login.in
@@ -47,11 +47,12 @@ session		include		system-auth
 #if HAVE_CONSOLEKIT
 session		optional	pam_ck_connector.so nox11
 #endif
+#if HAVE_SELINUX
+# Note: modules that run in the user's context must come after this line.
+session		required	pam_selinux.so multiple open
+#endif
 #if HAVE_GNOME_KEYRING
 session		optional	pam_gnome_keyring.so auto_start
-#endif
-#if HAVE_SELINUX
-session		required	pam_selinux.so multiple open
 #endif
 #if HAVE_MOTD
 session		optional	pam_motd.so motd=/etc/motd
