--- a/passwd.in
+++ b/passwd.in
@@ -1,6 +1,7 @@
-auth       sufficient   pam_rootok.so
-auth       include	system-auth
+auth		sufficient	pam_rootok.so
+auth		include		system-auth
 
-account    include	system-auth
+account		include		system-auth
 
-password   include	system-auth
+password	include		system-auth
+-password	optional	pam_gnome_keyring.so UNIX_AUTHTOK
