--- a/system-auth.in
+++ b/system-auth.in
@@ -39,3 +39,7 @@ session		optional	pam_ssh.so
 #if HAVE_SYSTEMD
 -session        optional        pam_systemd.so
 #endif
+
+#if HAVE_ELOGIND
+-session        optional        pam_elogind.so
+#endif
