--- a/system-auth.in
+++ b/system-auth.in
@@ -43,3 +43,7 @@ session		optional	pam_ssh.so
 #if HAVE_ELOGIND
 -session        optional        pam_elogind.so
 #endif
+
+#if HAVE_LIBCAP
+auth		optional	pam_cap.so
+#endif
