--- a/system-login.in
+++ b/system-login.in
@@ -32,7 +32,7 @@ session         optional        pam_loginuid.so
 session		required	pam_selinux.so close
 #endif
 #if HAVE_ENV
-session		required	pam_env.so DEBUG
+session		required	pam_env.so envfile=/etc/profile.env DEBUG
 #endif
 #if HAVE_LASTLOG
 session		optional	pam_lastlog.so silent DEBUG
