--- a/system-auth.in
+++ b/system-auth.in
@@ -2,7 +2,7 @@
 auth		required	pam_env.so DEBUG
 #endif
 
-#if HAVE_FAILOCK
+#if HAVE_FAILLOCK
 auth            required        pam_faillock.so preauth silent audit deny=3 unlock_time=600
 auth            sufficient      pam_unix.so nullok try_first_pass
 auth            [default=die]   pam_faillock.so authfail audit deny=3 unlock_time=600
