New pambase era
pambase was simplified and rewritten in python

Signed-off-by: Mikle Kolyada <zlogene@gentoo.org>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-login
-passwd
-su
-system-auth
-system-login
-system-local-login
-system-remote-login
-system-services
-other
-pambase-*.tar.bz2
+stack/
+.idea/
