tox: allowlist_externals = diff
Signed-off-by: Mike Gilbert <floppym@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ env_list = py3{10,11,12}-{default,minimal,custom}
 description = check template rendering stability
 deps =
     jinja2
-allowlist_externals = /usr/bin/diff
+allowlist_externals = diff
 commands =
     python --version
     default: python pambase.py
