Replace --sha512 and --yescrypt with --encrypt option
Signed-off-by: Mike Gilbert <floppym@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -14,5 +14,5 @@ commands =
     default: diff -Nru tests/rendered/default stack
     minimal: python pambase.py --minimal
     minimal: diff -Nru tests/rendered/minimal stack
-    custom: python pambase.py --elogind --nullok --passwdqc --sha512 --shells
+    custom: python pambase.py --elogind --nullok --passwdqc --encrypt sha512 --shells
     custom: diff -Nru tests/rendered/custom stack
